--- a/home/Static/style.css
+++ b/home/Static/style.css
@@ -1,3 +1,21 @@
 .title {
-    
+    color: #4CAF50;
 }
+
+.button {
+    background-color: #ddd;
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+
+.button:focus {
+    background-color: #4CAF50;
+}
+
