--- a/home/Templates/home.html
+++ b/home/Templates/home.html
@@ -21,24 +21,26 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>My Website</h1>
-        <h3>Choose your options</h3>
-
-            <input type="radio" id="html" name="fav_language" value="HTML">
-            <label for="html">HTML</label><br>
-
-            <input type="radio" id="css" name="fav_language" value="CSS">
-            <label for="css">CSS</label><br>
-
-            <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-            <label for="javascript">JavaScript</label>
-
-        <h3 class="title">Thêm gợi ý</h3>
-        <form action="">
-            
+        <h1 class="title">My Website</h1>
+        
+        <h3>Choose your options</h3>       
+        <button class="button" name="subject" type="submit" value="">HTML</button>
+        <button class="button" name="subject" type="submit" value="">CSS</button>
+        <button class="button" name="subject" type="submit" value="">JS</button>
+        
+        <h3>Thêm gợi ý</h3>
+        <form action="" class="form">
             <input type="text" id="fname" name="fname" placeholder="Nhập tên bài hát, nghệ sĩ,..."><br><br>
             <input type="submit" value="Submit">
         </form>
+
+
+
+
+
+
+
+        
 
         
         
